tests/invalid/test2.var
var x = 5
x = x + 1;

// Why invalid : Missing semicolon